<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>
    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="act_main_windowname_hint">All Windows</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>
    <string name="window_name">Window name</string>
    <string name="selected_item">Selected item:</string>
    <string name="empty">Empty</string>
    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
    <string name="title_activity_menu">menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="building_windows">Building windows</string>
    <string name="building_heaters">Building Heaters</string>


    <string name="outside_temperature">Outside Temperature</string>

    <string name="find_rooms">Find Rooms</string>
    <string name="heater_name">Heater Name</string>
    <string name="create_heater">Create heater</string>
    <string name="heater_status">Heater status</string>

    <string name="heater_name2">Heater name</string>

    <string name="building_name">Building name</string>
    <string name="create_building">Create building</string>
    <string name="outsidetemperature">OutsideTemperature</string>

    <string name="status">Status</string>

    <string name="power">Power</string>
    <string name="delete">Delete</string>


    <string name="floor">Floor</string>
    <string name="building_id">Building ID</string>
    <string name="room_name">Room name</string>
    <string name="create_room">Create room</string>


    <string name="selected_building_id">Selected building id</string>
    <string name="room_id">Room ID</string>
    <string name="create_window">Create window</string>

    <string name="selected_id">Selected id</string>
    <string name="_0">0</string>
    <string name="text_view">Text View</string>
    <string name="textview">TextView</string>
    <string name="text_view2">Text View</string>


</resources>